Try to fix slider content alignment

--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -56,23 +56,21 @@
       height: 100%;
 
       img {
-         max-height: 300px;
-         height: 100%;
+         height: 300px;
+         // height: 100%;
 
          @include mobile-screen {
             margin: 0 auto;
          }
       }
 
-      .contents {
-
-         margin-top: auto;
-      }
-
       h4 {
          font-size: 31px;
-         min-height: 50px;
+         min-height: 80px;
          margin-bottom: 30px;
+         display: flex;
+         flex-direction: column;
+         justify-content: flex-end;
 
          @include tab-screen {
             font-size: 26px;
